2005-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/ps-to-png.scm (make-ps-images): Use ~S instead of single
	quoted ~s.  This should fix PNG output on Windows; single quotes
	are regular characters on Windows.

2005-06-16  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/basic-notation.itely: include ChoirStaff
	in System start delimiters.

	* Documentation/user/putting.itely: new doc section on
	fixing overlapping notation.

2005-06-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/global.itely (Paper size): \paper is in
	\book, not \score.

	* make/mutopia-rules.make: -ddelete-intermediate-files

	* ly/engraver-init.ly: make Staff default child of ChoirStaff.

2005-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: Recode utf-8.

	* python/GNUmakefile (INSTALLATION_OUT_DIR): Install .so module in
	datadir with .py modules.

2005-06-15  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/basic-notation.itely (Ties): add tieDashed.

2005-06-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/mutopia-rules.make: switch off ps, p&c for lilypond runs.
	
	* scm/framework-ps.scm (write-preamble): remove status check.

	* Documentation/user/invoking.itely (Updating files with
	convert-ly): remove -o option.

	* VERSION (PACKAGE_NAME): release 2.5.31

	* scm/framework-ps.scm (write-preamble): use ly:system.
	(write-preamble): verbosity.

	* scripts/convert-ly.py: cleanup. Use lilylib. Use convertrules.

	* python/convertrules.py: new file. Store conversion rules
	separately.

2005-06-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/backend-library.scm (postprocess-output): remove debugging gobs.

2005-06-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/topdocs/NEWS.tely (Top): Corrected name of
	\musicDisplay 

	* Documentation/user/instrument-notation.itely (More stanzas): Add
	reference to StanzaNumber.

2005-06-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* THANKS: separate section for website translators.
