@@ -1,3 +1,9 @@
+2005-06-17  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/editor.scm (editor-command-template-alist): Use char iso
+	column, except for Emacs.
+	(get-editor-command): Substitute char too (Bert).
+
 2005-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/ps-to-png.scm (make-ps-images): Use ~S instead of single
